--- a/src/materials/calculus/limits/properties.mdx
+++ b/src/materials/calculus/limits/properties.mdx
@@ -25,7 +25,7 @@ The limit of a function **multiplied by a constant** is equal to the constant mu
 ---
 
 <Formula>
-$\lim\limits*{x\rightarrow a} \left [f(x) \pm g(x) \right] =\lim\limits*{x\rightarrow a} f(x) \pm \lim\limits\_{x\rightarrow a} g(x) $
+$\lim\limits_{x\rightarrow a} \left [f(x) \pm g(x) \right] =\lim\limits_{x\rightarrow a} f(x) \pm \lim\limits\_{x\rightarrow a} g(x) $
 </Formula>
 
 The **sum or difference** of the limit of two functions is equal when **adding or subtracting** them individually.
@@ -35,7 +35,7 @@ The **sum or difference** of the limit of two functions is equal when **adding o
 <Formula>
 $\lim\limits_{x\rightarrow a} f(x)g(x) =\lim\limits_{x\rightarrow a} f(x) \times \lim\limits_{x\rightarrow a} g(x)$  
  &nbsp;
-$\lim\limits*{x\rightarrow a} \frac{f(x)}{g(x)} = \large \frac{\lim\limits*{x\rightarrow a} f(x)}{\lim\limits\_{x\rightarrow a} g(x)}, \normalsize \text{where } g(x) \neq 0 $
+$\lim\limits_{x\rightarrow a} \frac{f(x)}{g(x)} = \large \frac{\lim\limits_{x\rightarrow a} f(x)}{\lim\limits\_{x\rightarrow a} g(x)}, \normalsize \text{where } g(x) \neq 0 $
 </Formula>
 
 The **product or quotient** of the limit of two functions is equal when **multiplying or dividing** them individually.
@@ -168,7 +168,8 @@ We can see that once we rationalize the numerator, we are fortunate enough to se
 # Piecewise Function: An Example
 
 <Example>
-Given $f(x) = \begin{cases} x + 4 & \text{ if } x < -4 \\ x^2 + 5x + 4 & \text{ if } x \geq -4  \end{cases}$  
+Given the function $f$ that is defined below:
+$$f(x) = \begin{cases} x + 4 & \text{ if } x < -4 \\ x^2 + 5x + 4 & \text{ if } x \geq -4  \end{cases}$$
 Evaluate $\lim\limits_{x\rightarrow -4} f(x)$
 </Example>
 
