--- a/src/materials/calculus/derivative/trigonometric.mdx
+++ b/src/materials/calculus/derivative/trigonometric.mdx
@@ -19,7 +19,7 @@ $$
 $$
 </Formula>
 
-Memorizing the above basic derivation is useful. By using the first two derivation (sin and cos), you can obtain the derivation of the remaining trigonometric functions.
+Memorizing the above basic derivation is useful, as well as remembering basic trigonometric identities. By using the first two derivation (sin and cos), you can obtain the derivation of the remaining trigonometric functions. 
 
 ===
 
@@ -61,58 +61,45 @@ $$
 
 ===
 
-# Derivatives of Logarithmic and Exponential Functions
+# **Practice:** Trigonometric Derivatives
 
-<Formula>
+Let $f(x)=\frac{2 \tan{4x} }{2 - \sec^2{4x}}$.  Calculate $f'(90°)$ and $f''(90°)$. Round your answer to the nearest integer.
+
+<Practice id="trigonometric-derivative-1" answer="8" placeholder="f'(90°)" />
+<Practice id="trigonometric-derivative-2" answer="0" placeholder="f''(90°)" />
+
+<Explanation>
+**First Derivative:**  
+Recall these trigonometric identities.
+
 $$
 \begin{align*}
-f(x)&=\log_a{u}\\
-f'(x)&=\frac{u'}{u \ln{a}}
-\end{align*}
-$$
-</Formula>
-
-Provided $u$ is a function, and $a$ is a constant ($a \neq 1$).
-
----
-
-<Formula>
-$$
-\begin{align*}
-f(x)&=u^v\\
-f'(x)&=u^v (v \ln{u})'
-\end{align*}
-$$
-</Formula>
-
-Provided both $u$ and $v$ are functions, and $a$ is a constant.
-
-===
-
-# Derivatives of Logarithmic and Exponential Functions: Example
-
-<Example>
-If $f(x) = - \ln{\left | \cos{2x} \right |}$, calculate $f'(x)$.
-</Example>
-
-Remember the chain rule. Consider $p(x) = \cos{2x}$ and $q(x) = \ln{\left | x \right |}$. Then,  
-$$
-\begin{align*}
-p(x)&=\cos{2x}\\
-p'(x)&=-2\sin{2x}\\
-q(x)&=\ln{\left | x \right |}\\
-q'(x)&=\frac{1}{x}\\
+\tan{2x}&=\frac{2\tan{x}}{1-\tan^2{x}}\\
+\tan^2{x}+1&=\sec^2{x}
+\\
+f(x)&=\frac{2\tan{(4x)}}{2-\sec^2{(4x)}}\\
+&=\frac{2\tan{(4x)}}{2-(1+\tan^2{(4x)})}\\
+&=\frac{2\tan{(4x)}}{1-\tan^2{(4x)})}\\
+&=\tan{(8x)}\\
+f'(x)&=8\sec^2{(8x)}\\
+f'\left ( 90° \right )&= 8\\
 \end{align*}
 $$
 
-Do the main derivation:
+<br />
+**Second Derivative:**  
+
+Expand $\sec$ to use the product rule.
 $$
 \begin{align*}
-f(x)&=- \ln{\left | \cos{2x} \right |}\\
-&=- q(p(x)) \\
-f'(x)&=- q'(p(x)) . p'(x) \\
-&=- \frac{1}{\cos{2x}} \times -2\sin{2x} \\
-&=- \frac{-2\sin{2x}}{\cos{2x}}\\
-&=2 \tan{2x}
+u=v&=\sec{(8x)}\\
+u'=v'&=8\sec{(8x)}\tan{(8x)}\\
+\\
+f'(x)&=8\sec^2{(8x)}\\
+&=8uv\\
+f''(x)&=8(u'v+uv')\\
+&=8(16\sec^2{(8x)}\tan{(8x)})\\
+f''\left ( 90° \right )&=0
 \end{align*}
 $$
+</Explanation>
