--- a/src/materials/calculus/limits/common.mdx
+++ b/src/materials/calculus/limits/common.mdx
@@ -25,11 +25,9 @@ However, we will try to **prove** it, and there are many ways to prove this limi
 
 ===
 
-# Proof of a Trigonometric Limit
+# The Squeeze Theorem and Proof of a Trigonometric Limit
 
-<Theorem>
-**Squeeze Theorem**
-
+<Theorem title="Squeeze Theorem">
 Suppose that $f(x) ≤ g(x) ≤ h(x)$ for all $x$ in an open interval containing $a$, except possibly at $a$, and $\lim\limits_{x\rightarrow a}f(x)= \lim\limits_{x\rightarrow a} h(x)=L$. So, $\lim\limits_{x\rightarrow a} g(x)=L$.
 
 </Theorem>
@@ -84,6 +82,26 @@ $$
 $$
 
 There we go! We have proven that $\lim\limits_{x\rightarrow 0}\frac{\sin{x}}{x} = 1$.
+
+===
+
+# The Squeeze Theorem: Example
+
+<Example>
+Evaluate $\lim\limits_{x\rightarrow \infty} \frac{\sin{x}}{x}=...$
+</Example>
+
+To do this limit, we can use the Squeeze Theorem. Firstly, consider the $\sin{x}$ function, and its minimum and maximum possible value, which are $-1$ and $1$ respectively. Therefore, we can write the following:
+$-1 \leq \sin{x} \leq 1$. Multiply all sides with $\frac{1}{x}$, then take the limit on all sides:
+$$
+\begin{align*}
+-1 &\leq \sin{x} \leq 1\\
+-\frac{1}{x} &\leq \frac{\sin{x}}{x} \leq \frac{1}{x}\\
+\lim\limits_{x\rightarrow \infty} -\frac{1}{x} & \leq \lim\limits_{x\rightarrow \infty} \frac{\sin{x}}{x} \leq \lim\limits_{x\rightarrow \infty} \frac{1}{x}\\
+\end{align*}
+$$
+
+We know that $\lim\limits_{x\rightarrow \infty} -\frac{1}{x} = 0$ and $\lim\limits_{x\rightarrow \infty} \frac{1}{x} = 0$. Therefore, by Squeeze Theorem, $\lim\limits_{x\rightarrow \infty} \frac{\sin{x}}{x} = 0$. 
 
 ===
 
@@ -168,6 +186,6 @@ Match the limits on the left side, with the numbers on the right side.
 />
 <Match
   id="limit-log-2"
-  left="#\lim\limits_{x\rightarrow 0} \frac{\ln{\left ( \frac{1}{3} + x \right )} - \ln{\left ( \frac{1}{3} - x \right )}}{x}#"
+  left="#\lim\limits_{x\rightarrow 0} \frac{3^{2x} - 2^{-x}3^x}{x 2^{-x} 3^x}#"
   right="#6#"
 />
