--- a/src/materials/calculus/limits/continuity.mdx
+++ b/src/materials/calculus/limits/continuity.mdx
@@ -7,8 +7,8 @@ the function $f$ is continuous at $a$ if $\lim\limits_{x\rightarrow 0}f(x)=f(a)$
 
 There are other specific terms to describe continuity:
 
-- $f$ is continuous from the left at $a$ if $\lim\limits_{x\rightarrow 0^-}f(x)=f(a)$
-- $f$ is continuous from the right at $a$ if $\lim\limits_{x\rightarrow 0^+}f(x)=f(a)$
+- $f$ is continuous from the left at $a$ if $\lim_{x\rightarrow 0^-}f(x)=f(a)$
+- $f$ is continuous from the right at $a$ if $\lim_{x\rightarrow 0^+}f(x)=f(a)$
 - $f$ is continuous on an open interval $(a, b)$ if $f$ is continuous for every number $k$, where $a < k < b$
 - $f$ is continuous on a closed interval $[a, b]$ if $f$ is continuous for every number $k$, where $a \le k \le b$
 
