--- a/src/materials/calculus/limits/definition.mdx
+++ b/src/materials/calculus/limits/definition.mdx
@@ -12,7 +12,7 @@ Let $f$ be a function defined on an open interval containing $a$, with the possi
 
 # Determining Limits
 
-Let's use a simple function $f(x) = x^2$ below. <Graph functions="x^2" />
+Let's use a simple function $f(x) = x^2$ below. <Graph functions="x*x" />
 
 If we set $x = -1$, we will have $f(-1)=1$. If we set $x = -0.1$, we will have $f(-0.1)=0.01$. If we set $x = -0.01$, we will have $f(-0.01)=0.0001$.
 
