--- a/src/materials/calculus/limits/properties.mdx
+++ b/src/materials/calculus/limits/properties.mdx
@@ -236,7 +236,7 @@ If it does not exist, type **DNE**. If it is $\infty$, type **infinity**.
 <Practice id="compute-limit-easy-1" answer="-12" />
 
 <Explanation>
-**Correct!** This is just another example of limit that we can solve with factorization. Tbe square root might get in our way, but let us create a new variable $v$, such that $v = \sqrt{x}$. Since we're converting from one to another variable, the $x$ we're approaching in the limit also changes accordingly. Even if you do not subsitute, **the result will stay the same**.
+**Correct!** This is just another example of limit that we can solve with factorization. The square root might get in our way, but let us create a new variable $v$, such that $v = \sqrt{x}$. Since we're converting from one to another variable, the $x$ we're approaching in the limit also changes accordingly. Even if you do not subsitute, **the result will stay the same**.
 
 $$
 \begin{align*}
