feat: colored functions

--- a/src/materials/calculus/derivative-applications/examples.mdx
+++ b/src/materials/calculus/derivative-applications/examples.mdx
@@ -1,8 +1,8 @@
 # Tangent Lines and Normal Lines
 
-The line passing through a function $f$ (that's differentiable at $c$) at $P(c, f(c))$, while having the slope $m$ where $f'(c)=m$, is $f$'s tangent line at the point $P$.  
+The line passing through a function $f$ (that's differentiable at $c$) at $P(c, f(c))$, while having the slope $m$ where $f'(c)=m$, is $f$'s tangent line at the point $P$.
 
-Normal line at a point is a line that is perpendicular to the tanget line at that point.  
+Normal line at a point is a line that is perpendicular to the tanget line at that point.
 
 Two curves are orthogonal if their tangent lines are perpendicular at each point of intersections of the curves.
 
@@ -11,10 +11,13 @@ Two curves are orthogonal if their tangent lines are perpendicular at each point
 # Tangent Lines and Normal Lines: Example
 
 <Example>
-Given $f(x)=\frac{x^2}{2}-2$, find the equation of the tangent line to $f$ on $x=2$, as well as the normal line.
+  Given $f(x)=\frac{x ^ 2}
+  {2}-2$, find the equation of the tangent line to $f$ on $x=2$, as well as the normal
+  line.
 </Example>
 
 Derive $f$:
+
 $$
 \begin{align*}
 f(x)&=\frac{x^2}{2}-2\\
@@ -43,7 +46,7 @@ y&=-\frac{1}{2}x+1
 \end{align*}
 $$
 
-<Graph functions="(x*x)/2-2,2*x-4" points="2,0-solid" />
+<Graph functions="(x*x)/2-2,2*x-4" points="2,0~solid" />
 
 ===
 
@@ -56,7 +59,8 @@ To solve optimization problems, you need to be able to identify the correct vari
 # Optimization Problems: Example
 
 <Example>
-Suppose you have a wire that is $40\text{ cm}$ long to form a rectangle. What is its largest possible area?
+  Suppose you have a wire that is $40\text{cm}$ long to form a rectangle. What
+  is its largest possible area?
 </Example>
 
 We know that the resulting rectangle's perimeter will always be $40\text{ cm}$, thus $2w+2l=40$, which can be simplified into $l=20-w$.
@@ -75,6 +79,3 @@ w&=10
 $$
 
 We are not finished yet, as this result only shows at which width will the rectangle achieve its maximum area. Substituting this into our initial equality yields us the length $10$\text{ cm}. Therefore, the maximum possible area is $100\text{ cm}^2$.
-
-
-
