--- a/src/materials/calculus/limits/definition.mdx
+++ b/src/materials/calculus/limits/definition.mdx
@@ -1,55 +1,82 @@
-# Definitions
+# What's a Limit? - 1
 
-## Precise Definition of Limit
+Let's use a simple function $f(x) = x^2$.
 
-Let $f$ be a function defined on an open interval containing $a$, with the possible exception of a itself (the function f does not need to be defined on a), then $\lim\limits_{x\rightarrow a} f(x)=L$ if for every number $\epsilon > 0$, exists a number $\delta > 0$ such that: $0 < |x - a| < \delta$ implies that $|f(x) - L| < \epsilon$.
-
-## General Definition of Limit
-
-Let $f$ be a function defined on an open interval containing $a$, with the possible exception of $a$ itself (the function $f$ does not need to be defined on $a$), then $\lim\limits_{x\rightarrow a} f(x)=L$ if $f(x)$ can be made as close to $L$ by making $x$ to be sufficiently close to $a$, from both right and left side: $\lim\limits_{x\rightarrow a^+} f(x)=\lim\limits_{x\rightarrow a^-} f(x)=L$.
-
-===
-
-# Determining Limits
-
-Let's use a simple function $f(x) = x^2$ below. <Graph functions="x*x" />
+<Graph functions="x^2" />
 
 If we set $x = -1$, we will have $f(-1)=1$. If we set $x = -0.1$, we will have $f(-0.1)=0.01$. If we set $x = -0.01$, we will have $f(-0.01)=0.0001$.
 
-As we can see, if we go from anywhere on the left side to $x = 0$, we can tell that as $x$ approaches $0$ from the left side, the value of $f(x)$ will eventually approach $0$. The same also happens if we look from the right side, that is, as $x$ approaches $0$ from the right side, the value $f(x)$ will also eventually approach $0$.
+As we can see, if we go from anywhere on the left side to $x = 0$, we can tell that as $x$ approaches $0$ from the left side, the value of $f(x)$ will eventually approach $0$. The same also happens if we look from the right side, that is, as $x$ approaches $0$ from the right side, the value $f(x)$ will also eventually approach $0$. These sentences can be written as $\lim\limits_{x\rightarrow 0^-} f(x)= 0$ (from the left side) and $\lim\limits_{x\rightarrow 0^+} f(x)= 0$ (from the right side).
 
-In this case, we can say that the limit of $f(x)$ as $x$ approaches $0$, is $0$. In other words, $\lim\limits_{x\rightarrow 0} (x^2) = 0$. Note that we do not necessarily always find the limit by substituting the $x$ directly to the function like in this case.
-
-===
-
-# Determining Limits
-
-<Graph functions="1/x" />
-
-Sometimes, we may get something like the above $g(x) = \frac{1}{x}$. What would be the value of $\lim\limits_{x\rightarrow 0} \frac{1}{x}$? That's right, it doesn't exist. If we recall the definiton of limit, we can clearly see that if we try approaching $x = 0$ from the right side, $g(x)$ will eventually approach $-\infty$, whereas approaching $x = 0$ from the left side, $g(x)$ will eventually approach $\infty$. Therefore, it is true that $\lim\limits_{x\rightarrow 0^-} \frac{1}{x} = -\infty$ and $\lim\limits_{x\rightarrow 0^+} \frac{1}{x} = \infty$.
+In this case, since both limits approach to the same value, we can say that the limit of $f(x)$ as $x$ approaches $0$, is $0$. In other words, $\lim\limits_{x\rightarrow 0} f(x) = 0$. For a limit of a function as it approaches a point to exist, limits from both directions have to be the same.
 
 ===
 
-# Determining Limits
+# What's a Limit? - 2
 
-<Graph functions="1/[x]" />
+<Theorem title="General Definition of Limit">
+Let $f$ be a function defined on an open interval containing $a$, with the possible exception of $a$ itself (the function $f$ does not need to be defined on $a$), then $\lim\limits_{x\rightarrow a} f(x)=L$ if $f(x)$ can be made as close to $L$ by making $x$ to be sufficiently close to $a$, from both right and left side: $\lim\limits_{x\rightarrow a^+} f(x)=\lim\limits_{x\rightarrow a^-} f(x)=L$.
+</Theorem>
 
-This case is a little bit deifferent than the last one. This time, we have $h(x) = \frac{1}{|x|}$ . As you may have guessed, this one function does have a limit as $x$ approaches $0$ because the limit as $x$ approaches $0$ from the right and from the left is the same. Therefore, we can say that $\lim\limits_{x\rightarrow 0} \frac{1}{|x|} = \infty$
+Consider another example $f(x)$, which graph is shown below. Try predicting $f$'s limit as $x$ approaches the following values: $-6$, $-3$, $-2$, $2$, and $6$.
+Note that solid (closed) dot indicate that it is included within the function's domain, and the open dot indicate otherwise. You can consider this as the difference between less than equal to, and less than. Remember that for a function to have a limit as it approaches $x$, the limit from the left and right side must be the same.
+
+<Graph
+  functions="1+4/(x+2)@[-6,2];(x-6)*(x-4)*(x-2)@[2,6]"
+  asymptotes="x=-2"
+  points="2,2~solid;0,2~outline;-3,-3~outline;3,-3~solid;0,6~solid;0,-6~outline"
+  ranges="[8,8,-8,-8]"
+/>
+
+The following table summarizes the function $f$:
+
+| $x$  | $f(x)$    | $\lim\limits_{x\rightarrow 0^-}$ | $\lim\limits_{x\rightarrow 0^+}$ | $\lim\limits_{x\rightarrow 0}$ |
+| ---- | --------- | -------------------------------- | -------------------------------- | ------------------------------ |
+| $-6$ | undefined | does not exist                   | $-6$                             | does not exist                 |
+| $-3$ | $3$       | $-3$                             | $-3$                             | $-3$                           |
+| $-2$ | undefined | $-\infty$                        | $\infty$                         | does not exist                 |
+| $2$  | $2$       | $2$                              | $0$                              | does not exist                 |
+| $6$  | $0$       | $0$                              | does not exist                   | does not exist                 |
+
+===
+
+# What's a Limit? - 3
+
+Consider another example $f(x)$ and $g(x)$, which graphs are shown below. Sometimes we have to find the limit of a function as $x$ approaches $\infty$ or $-\infty$.  
+
+<TwoColumns>
+  <Graph functions="1/x-1@[-8,0];(x^2+1)/x-2@[0,8]" asymptotes="y=-1" />
+  <Graph functions="(x^2-2*x)/(x^2+1)" asymptotes="y=1" />
+</TwoColumns>
+
+For the first graph $f$, we can see that:
+
+- $\lim\limits_{x\rightarrow -\infty} f(x) = -1$, as hinted by the horizontal asymptote.
+- $\lim\limits_{x\rightarrow \infty} f(x) = \infty$, as the function is only shown to keep increasing.
+
+For the second graph $g$, we can see that:
+
+- $\lim\limits_{x\rightarrow -\infty} g(x) = 1$, as hinted by the horizontal asymptote.
+- $\lim\limits_{x\rightarrow \infty} g(x) = 1$, as hinted by the horizontal asymptote.
 
 ===
 
 # **Practice:** Determining Limits
 
-Suppose we have a function $f(x)$ that we do not exactly know of, but we only have the following information;
+Consider $f$ that is graphed below:
 
-| x    | -2.1 | -2.01 | -2.001 | -1.998 | -1.98 | -1.8 |
-| ---- | ---- | ----- | ------ | ------ | ----- | ---- |
-| f(x) | 5.11 | 5.09  | 5.005  | 5.006  | 5.01  | 5.12 |
+<Graph
+  functions="((x+3)^2+3)/(x+2)@[-10,-2];x^3-3*x@[-2,2];x/(x-1)@[2,10]"
+  asymptotes="x=-2,y=1"
+  points="-2,-2~outline;2,2~outline;4,2~solid"
+  ranges="[8,8,-8,-8]"
+/>
 
-What integer would be the most reasonable estimate for $\lim\limits_{x\rightarrow -2} f(x)$?
+Determine the limit of $f$ as $x$ approaches the following $x$ values. If necessary, enter **DNE** to indicate that a limit does not exist, or **INF** to indicate that a limit is infinity. This instruction applies to the rest of this course, when working on limits.
 
-<Practice id="estimate-limit" answer="5" />
-
-<Explanation>
- **That's right!** From the left ($x=-2.1$ to $x=-2.001$), the value of $f(x)$ approaches $5$. Likewise, from the right ($x=-1.8$ to $x=-1.998$), the value of $f(x)$ also approaches $5$. The most reasonable guess for $\lim\limits_{x\rightarrow -2} f(x)$ is $5$.
-</Explanation>
+$x=-2$
+<Practice id="determining-limits-1" answer="DNE" />
+$x=2$
+<Practice id="determining-limits-2" answer="2" />
+$x=\infty$
+<Practice id="determining-limits-3" answer="1" />
